# langcode-py

./: .env.example  .gitignore  ARCHITECTURE.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  pyproject.toml
.claude/: ralph-loop.local.md
examples/: __init__.py  basic_usage.py
langcode/: __init__.py  agent.py  analyzer.py  cli.py  context.py  tools.py
tests/: __init__.py  conftest.py  test_agent.py  test_analyzer.py  test_context.py  test_modes.py  test_new_tools.py  test_tools.py
